--- a/portfolio-main/package.json
+++ b/portfolio-main/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
+    "@mui/material": "^5.10.15",
     "emailjs-com": "^3.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-feather": "^2.0.10",
     "react-github-calendar": "^3.3.1",
+    "react-loader-spinner": "^5.3.4",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
